   * Add a few English words/names to dictionaries
   * Make formatting shortcuts in waveform work w selected lines
   * Remember font in burn-in - thx Nespula95
   * Remember "Merge lines with same text" settings - thx kamitsu2004
   * Update Whisper CPP to 2023-01-08
   * Rename "Fix dialogs on one line" to "Break dialogs on one line"
   * Update Tesseract 5.2.0 to 5.3.0
* FIXED:
   * Fix italic in DCinema interop - thx Andrey
   * Fix Whisper model download - thx darnn
   * Fix "play video from url" for installer version
   * Keep bookmarks after source view edit - thx MMT
   * Fix for "replace all" non reg-ex
   * Fix wrongful removal of "Unneeded Space" - thx Minherre
   * Fix possible crash in Choosee Profile - thx darnn
   * Make "Add missing space" work with non-English letters - thx Redjan
   * Fix a few UI issues in "Word lists" - thx Edwin
   * Fix crash in "Sync via other sub" - thx JP
   * Fix original desync after set start time - thx Leon
   * Handle multi-audio-track waveform/spectrogram better - thx AlfonZ42
   * Fix CSV reading issue - thx Instinct64 


3.6.10 (21th November 2022)
* FIXED:
   * Fix missing dll file


3.6.9 (20th November 2022)
* NEW:
   * Support mp4 webvtt in cmd line convert
   * Add Whisper translate to English option - thx David 
   * Add some support for frame rate in Spruce format
   * Allow minimize for audio-to-text windows
   * Set x11 as default mpv vo (video output) on Linux
   * Add shortcut for ASSA bacground box - thx Fuad
* IMPROVED:
   * Update French translation - the Peirre
   * Update Italian translation - thx bovirus
   * Update Chinese translation - thx nkh0472
   * Update Bulgarian translation - thx Калин
   * Update Korean translation - thx domddol
   * Update Polish translation - thx admas
   * Update Greek translation - thx PMitsakis
   * Optimize bd sup saving in batch/cmd-line convert
   * Add a few English words/names to dictionaries
   * Add more settings for "Delete auto-backup after" - thx pahtashow 