@@ -1,0 +1,9 @@
+﻿namespace Nikse.SubtitleEdit.Core.AudioToText
+{
+    public class WhisperChoice
+    {
+        public const string OpenAI = "OpenAI";
+        public const string Cpp = "CPP";
+        public const string WhisperX = "WhisperX";
+    }
+}
